# debate-orchestrator

./: .gitignore  README.md  pyproject.toml
src/debate_orchestrator/: __init__.py  agent_runner.py  cli.py  config.py  debate_loop.py  models.py  prompts.py
tests/: mock_agent.py  test_debate_loop.py  test_parser.py  test_termination.py
