[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "debate-orchestrator"
version = "0.1.0"
description = "複数Codex自動討論オーケストレータ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
debate-orchestrator = "debate_orchestrator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
